added more line coverage in tests